--- a/PicoYPlacaPredictor/PicoYPlacaPredictor.csproj
+++ b/PicoYPlacaPredictor/PicoYPlacaPredictor.csproj
@@ -9,9 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Business\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
