chore: create Interfaces and Validators folders in Business layer

--- a/PicoYPlacaPredictor/PicoYPlacaPredictor.csproj
+++ b/PicoYPlacaPredictor/PicoYPlacaPredictor.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Business\Interfaces\" />
+    <Folder Include="Business\Validators\" />
+  </ItemGroup>
+
 </Project>
